--- a/Source/Microsoft.Teams.Apps.EmployeeTraining/Resources/Strings.resx
+++ b/Source/Microsoft.Teams.Apps.EmployeeTraining/Resources/Strings.resx
@@ -314,7 +314,7 @@
     <comment>Welcome card title for personal and team scope</comment>
   </data>
   <data name="WelcomeCardPersonalContentFooter" xml:space="preserve">
-    <value>Daha fazlası için: Select {0} below:</value>
+    <value>Daha fazlası için: {0} butonuna tıkla:</value>
     <comment>Welcome card footer message for personal scope</comment>
   </data>
   <data name="EventUpdatedCardTitle" xml:space="preserve">
