--- a/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
+++ b/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
@@ -24,7 +24,7 @@
   "categoriesNotFoundForSearchedTextDescription": "No results found. Try another keyword",
   "manageCategories": "Manage categories",
   "createEvent": "Add event",
-  "searchForEventsPlaceholder": "Find an event",
+  "searchForEventsPlaceholder": "Etkinlik bul",
   "draftEvents": "Draft",
   "activeEvents": "Active",
   "completedEvents": "Completed/Cancelled",
@@ -43,13 +43,13 @@
   "totalNoOfParticipants": "Max. number of participants",
   "private": "Private",
   "public": "Public",
-  "createdBy": "Created by",
+  "createdBy": "Oluşturan",
   "dropdownSearchLoadingMessage": "Loading results..",
   "startTypingDropdownSearch": "Start typing a name or group",
   "noResultFoundDropdownMessage": "No matches found",
   "required": "Required",
   "validUrlErrorMessage": "Enter valid URL",
-  "eventDetailsStep1": "Event details",
+  "eventDetailsStep1": "Etkinlik Detayları",
   "eventPhotoStep1": "Event image",
   "uploadPhotoStep1": "Upload image",
   "changePhotoStep1": "Change image",
@@ -98,20 +98,20 @@
   "categoryInUse": "This category is in-use and can't be deleted right now.",
   "participantsRegistered": "Registered participants",
   "availableSlots": "Available slots",
-  "register": "Register",
-  "save": "Save",
+  "register": "Kayıt ol",
+  "save": "Kaydet",
   "remove": "Cancel registration",
   "eventsNotAvailable": "No events available",
-  "mandatoryEventsTab": "Mandatory",
-  "allEventsTab": "All",
+  "mandatoryEventsTab": "Mecburi Etkinlikler",
+  "allEventsTab": "Tüm Etkinlikler",
   "filterButtonText": "Filter",
   "sortByNewest": "Newest",
   "sortByPopularity": "Popular in my network",
-  "registeredEventsTab": "Registered",
-  "completedEventsTab": "Completed",
+  "registeredEventsTab": "Kayıtlı Etkinlikler",
+  "completedEventsTab": "Tamamlanan Etkinlikler",
   "eventCardImageLoadingPlaceholder": "Loading image...",
   "eventCardImageNotFoundPlaceholder": "Image not found",
-  "eventRegistrationSuccessfulMessage": "Registration confirmed",
+  "eventRegistrationSuccessfulMessage": "Kayıt onaylandı.",
   "eventUnregistrationSuccessfulMessage": "Unregistered for the event",
   "closeRegistrationSuccessfulMessage": "Registrations closed successfully",
   "cancelEventSuccessfulMessage": "Event cancelled",
@@ -131,7 +131,7 @@
   "createEventFailureMessage": "Failed to create event",
   "exportDetailsFailureMessage": "Failed to export data",
   "sendReminderFailureMessage": "Failed to send reminder",
-  "mandatoryArtifactText": "Mandatory",
+  "mandatoryArtifactText": "Mecburi",
   "categoryAlreadyExistsError": "The category with the same name already exists",
   "mobileFilterTitle": "Filter events",
   "mobileFilterClearButtonText": "Clear all",
