--- a/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
+++ b/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
@@ -1,147 +1,147 @@
 {
-  "categoryName": "Category name",
-  "enterNamePlaceholder": "Type a name",
-  "description": "Description",
-  "categoryDescriptionPlaceholder": "Describe this category (100 words max.)",
-  "back": "Back",
-  "addCategory": "Add category",
-  "deleteCategoryConfirmation": "Would you like to delete the following categories?",
-  "listCategoriesSelectedStatus": "{{selectedCategoriesCount}}/{{totalCategoriesCount}} categories selected",
-  "categoriesNotAvailableHeader": "Get started by adding a category",
-  "categoriesNotAvailableHeaderDescription": "Add a category for ideas to get started",
-  "add": "Add",
-  "edit": "Edit",
-  "delete": "Delete",
-  "searchPlaceholder": "Find",
-  "categoryAddedSuccess": "Added successfully!",
-  "categoryUpdateSuccess": "Updated successfully!",
-  "categoryDeleteSuccess": "Deleted successfully!",
-  "lastUpdatedOnStatus": "Last updated on {{lastUpdatedOn}}",
-  "dataResponseFailedStatus": "Something went wrong. Please try after some time.",
-  "signInMessage": "Please sign in to continue.",
-  "failedToUpdateCategory": "Something went wrong and your update wasn't saved. Try again.",
-  "failedToDeleteCategory": "Something went wrong. Try deleting categories again.",
-  "categoriesNotFoundForSearchedTextDescription": "No results found. Try another keyword",
-  "manageCategories": "Manage categories",
-  "createEvent": "Add event",
+  "categoryName": "Kategori Adı",
+  "enterNamePlaceholder": "Bir isim ver",
+  "description": "Açıklama",
+  "categoryDescriptionPlaceholder": "Bu kategoriyle ilgili bilgi ver (100 kelime maksimum)",
+  "back": "Geri",
+  "addCategory": "Kategori Ekle",
+  "deleteCategoryConfirmation": "Aşağıdaki kategorileri silmek ister misin?",
+  "listCategoriesSelectedStatus": "{{selectedCategoriesCount}}/{{totalCategoriesCount}} kategori seçildi",
+  "categoriesNotAvailableHeader": "Bir kategori ekleyerek başla",
+  "categoriesNotAvailableHeaderDescription": "Başlamak için bir kategori ekle",
+  "add": "Ekle",
+  "edit": "Düzenle",
+  "delete": "Sil",
+  "searchPlaceholder": "Bul",
+  "categoryAddedSuccess": "Başarıyla eklendi!",
+  "categoryUpdateSuccess": "Başarıyla güncellendi!",
+  "categoryDeleteSuccess": "Başarıyla silindi!",
+  "lastUpdatedOnStatus": "Son Güncelleme Zamanı {{lastUpdatedOn}}",
+  "dataResponseFailedStatus": "Yanlış giden bir şeyler var, lütfen daha sonra tekrar dene.",
+  "signInMessage": "Devam etmek için lütfen oturum aç.",
+  "failedToUpdateCategory": "Güncelleme kaydedilemedi. Lütfen daha sonra tekrar dene",
+  "failedToDeleteCategory": "Yanlış giden bir şeyler var, lütfen daha sonra tekrar dene.",
+  "categoriesNotFoundForSearchedTextDescription": "Sonuç bulunamadı, başka bir kelime ile dene.",
+  "manageCategories": "Kategorileri yönet",
+  "createEvent": "Etkinlik ekle",
   "searchForEventsPlaceholder": "Etkinlik bul",
-  "draftEvents": "Draft",
-  "activeEvents": "Active",
-  "completedEvents": "Completed/Cancelled",
-  "eventTitle": "Event title",
-  "dateAndTime": "Date & time",
-  "venue": "Venue",
-  "noOfRegistrations": "Registrations",
-  "category": "Category",
-  "closeRegistration": "Close registration",
-  "editEventInformation": "Edit event",
-  "exportRegistrationDetails": "Export registration data",
-  "cancelEvent": "Cancel event",
-  "deleteDraft": "Delete draft",
-  "sendReminder": "Send reminder",
+  "draftEvents": "Taslak",
+  "activeEvents": "Aktif",
+  "completedEvents": "Tamamlananlar/ Silinenler",
+  "eventTitle": "Etkinlik Adı",
+  "dateAndTime": "Tarih & Saat",
+  "venue": "Lokasyon",
+  "noOfRegistrations": "Kayıtlar",
+  "category": "Kategori",
+  "closeRegistration": "Kaydı kapat",
+  "editEventInformation": "Etkinliği düzenle",
+  "exportRegistrationDetails": "Kayıt verisini dışarı aktar",
+  "cancelEvent": "Etknliği iptal et",
+  "deleteDraft": "Taslağı sil",
+  "sendReminder": "Hatırlatma gönder",
   "registeredParticipants": "Registered participants",
-  "totalNoOfParticipants": "Max. number of participants",
-  "private": "Private",
-  "public": "Public",
+  "totalNoOfParticipants": "Maksimum kayıtlı sayısı",
+  "private": "Özel",
+  "public": "Genel",
   "createdBy": "Oluşturan",
-  "dropdownSearchLoadingMessage": "Loading results..",
-  "startTypingDropdownSearch": "Start typing a name or group",
-  "noResultFoundDropdownMessage": "No matches found",
-  "required": "Required",
-  "validUrlErrorMessage": "Enter valid URL",
+  "dropdownSearchLoadingMessage": "Sonuçlar yükleniyor",
+  "startTypingDropdownSearch": "Bir kişi veya grup adı yaz",
+  "noResultFoundDropdownMessage": "Eşleşme bulunamadı",
+  "required": "Gerekli",
+  "validUrlErrorMessage": "Geçerli bir URL gir",
   "eventDetailsStep1": "Etkinlik Detayları",
-  "eventPhotoStep1": "Event image",
-  "uploadPhotoStep1": "Upload image",
-  "changePhotoStep1": "Change image",
-  "eventNameStep1": "Event name",
-  "eventNamePlaceholderStep1": "Type a short clear name",
-  "eventTypeStep1": "Event type",
-  "selectEventTypePlaceholder": "Select a type",
-  "selectCategoryPlaceholder": "Select a category",
-  "liveEventUrlStep1": "Live event URL",
-  "liveEventUrlPlaceholder": "Enter valid live event URL",
-  "venuePlaceholder": "Type a room, facility, or address",
-  "eventDescriptionStep1": "Description",
-  "eventDescriptionPlaceholder": "Briefly describe your event",
-  "startDateStep1": "Start date",
-  "startTimeStep1": "Start time",
-  "endTimeStep1": "End time",
-  "maxParticipantsStep1": "Maximum participants",
-  "audienceTypeStep2": "Who can attend",
-  "mandatoryAllButtonStep2": "Everyone mandatory",
-  "step1Of3": "Step 1/3",
-  "saveAsDraft": "Save as draft",
-  "nextButton": "Next",
-  "step2Of3": "Step 2/3",
-  "autoRegisterCheckboxLabelStep2": "Automatically register mandatory attendees",
-  "publicAudience": "Public",
-  "privateAudience": "Private",
-  "inPersonEvent": "In-person",
+  "eventPhotoStep1": "Etkinlik Görseli",
+  "uploadPhotoStep1": "Görsel yükle",
+  "changePhotoStep1": "Görseli değiştir",
+  "eventNameStep1": "Etkinlik adı",
+  "eventNamePlaceholderStep1": "Etkinliğe kısa bir isim ver",
+  "eventTypeStep1": "Etkinlik tipi",
+  "selectEventTypePlaceholder": "Etkinlik tipi seç",
+  "selectCategoryPlaceholder": "Etkinlik kategorisi seç",
+  "liveEventUrlStep1": "Canlı etkinlik URL",
+  "liveEventUrlPlaceholder": "Geçerli bir URL gir",
+  "venuePlaceholder": " Bir lokasyon seç",
+  "eventDescriptionStep1": "Açıklama",
+  "eventDescriptionPlaceholder": "Etkinliği kısaca açıkla",
+  "startDateStep1": "Balangıç tarihi",
+  "startTimeStep1": "Başlangıç saati",
+  "endTimeStep1": "Bitiş tarihi",
+  "maxParticipantsStep1": "Maksimum katılımcı sayısı",
+  "audienceTypeStep2": "Kimler katılabilir",
+  "mandatoryAllButtonStep2": "Herkes için mecburi",
+  "step1Of3": "Adım 1/3",
+  "saveAsDraft": "Taslak olarak kaydet",
+  "nextButton": "Sonraki",
+  "step2Of3": "Adım 2/3",
+  "autoRegisterCheckboxLabelStep2": "Mecburi katılımcıları otomatik kayıt et",
+  "publicAudience": "Genel",
+  "privateAudience": "Özel",
+  "inPersonEvent": "Yüzyüze",
   "teamsEvent": "Teams",
-  "liveEvent": "Live event",
-  "sortBy": "Sort by",
-  "selectHere": "Select here",
-  "clear": "Clear",
-  "noUserSelectedHeaderStep2": "Select at least one person or group",
-  "noUserSelectedContentStep2": "Search users and groups to add",
-  "audienceDetailsStep2": "Audience details",
-  "eventPreviewStep3": "Event preview",
-  "step3of3": "Step 3/3",
-  "mandatoryToggleStep2": "Mandatory",
-  "endDateStep1": "End date",
-  "teamsMeeting": "Teams meeting",
-  "updateEventButton": "Update event",
-  "deleteEvent": "Delete draft",
-  "deleteConfirmationText": "Are you sure you want to delete this event?",
-  "cancelledStatus": "Cancelled",
-  "editEvent": "Edit event",
-  "categoryInUse": "This category is in-use and can't be deleted right now.",
-  "participantsRegistered": "Registered participants",
-  "availableSlots": "Available slots",
+  "liveEvent": "Canlı etkinlik",
+  "sortBy": "Sıralama",
+  "selectHere": "Buradan seç",
+  "clear": "Temizle",
+  "noUserSelectedHeaderStep2": "En az bir kişi veya grup seç",
+  "noUserSelectedContentStep2": "Kişi veya grup seçmek için ara",
+  "audienceDetailsStep2": "Katılımcı Detayları",
+  "eventPreviewStep3": "Etkinlik önizlemesi",
+  "step3of3": "Adım 3/3",
+  "mandatoryToggleStep2": "Mecburi",
+  "endDateStep1": "Bitiş Tarihi",
+  "teamsMeeting": "Teams toplantısı",
+  "updateEventButton": "Etkinliği güncelle",
+  "deleteEvent": "Taslağı sil",
+  "deleteConfirmationText": "Etkinliği silmek istediğine emin misin?",
+  "cancelledStatus": "Silindi",
+  "editEvent": "Etkinliği düzenle",
+  "categoryInUse": "Bu kategori kullanımda olduğu için silinemiyor",
+  "participantsRegistered": "Kayıtlı katılımcılar",
+  "availableSlots": "Kontenjan",
   "register": "Kayıt ol",
   "save": "Kaydet",
-  "remove": "Cancel registration",
-  "eventsNotAvailable": "No events available",
+  "remove": "Kaydı iptal et",
+  "eventsNotAvailable": "Etkinlik mevcut değil",
   "mandatoryEventsTab": "Mecburi Etkinlikler",
   "allEventsTab": "Tüm Etkinlikler",
-  "filterButtonText": "Filter",
-  "sortByNewest": "Newest",
-  "sortByPopularity": "Popular in my network",
+  "filterButtonText": "Filtrele",
+  "sortByNewest": "En yeni",
+  "sortByPopularity": "En populer",
   "registeredEventsTab": "Kayıtlı Etkinlikler",
   "completedEventsTab": "Tamamlanan Etkinlikler",
-  "eventCardImageLoadingPlaceholder": "Loading image...",
-  "eventCardImageNotFoundPlaceholder": "Image not found",
+  "eventCardImageLoadingPlaceholder": "Görsel yükleniyor...",
+  "eventCardImageNotFoundPlaceholder": "Görsel bulunamadı.",
   "eventRegistrationSuccessfulMessage": "Kayıt onaylandı.",
-  "eventUnregistrationSuccessfulMessage": "Unregistered for the event",
-  "closeRegistrationSuccessfulMessage": "Registrations closed successfully",
-  "cancelEventSuccessfulMessage": "Event cancelled",
-  "updateEventSuccessfulMessage": "Event updated",
-  "exportDetailsSuccessfulMessage": "Event data exported",
-  "sendReminderSuccessfulMessage": "Reminder sent",
-  "deleteDraftEvent": "Deleted successfully",
-  "createEventSuccessfulMessage": "Created successfully",
-  "createDraftSuccessfulMessage": "Saved as draft",
-  "createDraftFailureMessage": "Failed to create draft",
-  "invalidImageDimensions": "Image dimensions must be between 850x290 and 900x310 pixels",
-  "eventNameAlreadyExists": "Event with same name already exists",
-  "eventNameMaxCharError": "Maximum 100 characters allowed",
-  "eventDescriptionMaxCharError": "Maximum 1000 characters allowed",
-  "eventVenueMaxCharError": "Maximum 200 characters allowed",
-  "updateEventFailureMessage": "Failed to update event",
-  "createEventFailureMessage": "Failed to create event",
-  "exportDetailsFailureMessage": "Failed to export data",
-  "sendReminderFailureMessage": "Failed to send reminder",
+  "eventUnregistrationSuccessfulMessage": "Etkinlik kaydı iptal edildi",
+  "closeRegistrationSuccessfulMessage": "Kayıt olma başarıyla kapatıldı",
+  "cancelEventSuccessfulMessage": "Etkinlik iptal edildi",
+  "updateEventSuccessfulMessage": "Etkinlik güncellendi",
+  "exportDetailsSuccessfulMessage": "Etkinlik verisi dışarı aktarıldı",
+  "sendReminderSuccessfulMessage": "Hatırlatıcı gönderildi",
+  "deleteDraftEvent": "Başarıyla silindi",
+  "createEventSuccessfulMessage": "Başarıyla yaratıldı",
+  "createDraftSuccessfulMessage": "Taslak olarak kaydedildi",
+  "createDraftFailureMessage": "Taslak oluşturulamadı",
+  "invalidImageDimensions": "Görsel boyutları 850x290 ve 900x310 piksel arasında olmalıdır",
+  "eventNameAlreadyExists": "Aynı isimde farklı bir etkinlik bulunuyor",
+  "eventNameMaxCharError": "Maksimum 100 karakter girilmelidir",
+  "eventDescriptionMaxCharError": "Maksimum 100 karakter girilmelidir",
+  "eventVenueMaxCharError": "Maksimum 200 karakter girilmelidir",
+  "updateEventFailureMessage": "Etkinlik güncellenemedi",
+  "createEventFailureMessage": "Etkinlik yaratılamadı",
+  "exportDetailsFailureMessage": "Veri dışarı aktarılamadı",
+  "sendReminderFailureMessage": "Hatırlatıcı gönderilemedi",
   "mandatoryArtifactText": "Mecburi",
-  "categoryAlreadyExistsError": "The category with the same name already exists",
-  "mobileFilterTitle": "Filter events",
-  "mobileFilterClearButtonText": "Clear all",
-  "mobileFilterApplyButtonText": "Apply",
-  "audienceTypeInfoIconTitle": "Public events are for everyone in your org. Private events are only for people specified by the event's creator.",
-  "timeZone": "Time zone",
-  "timeZonePlaceholder": "Select time zone",
-  "imageInfoIcon": "Image dimensions must be between 850x290 and 900x310. This image is public and can be accessed by anyone.",
-  "orLabelForImageOrColor": "Or",
-  "unknownUserName": "Unknown user",
-  "yourTimeZone": "Time zone",
-  "categoriesNotAvailableError": "The categories are not available. Please add a category through 'Manage categories' before creating an event."
+  "categoryAlreadyExistsError": "Aynı isimde farklı bir kategori bulunuyor",
+  "mobileFilterTitle": "Etkinlikleri filtrele",
+  "mobileFilterClearButtonText": "Hepsini sil",
+  "mobileFilterApplyButtonText": "Uygula",
+  "audienceTypeInfoIconTitle": "Genel etkinlikler organizasyon içindeki herkes içindir. Özel etkinlikler ise etkinlik yaratıcısının belirttiği kişilere özeldir.",
+  "timeZone": "Saat dilimi",
+  "timeZonePlaceholder": "Saat dilimi seç",
+  "imageInfoIcon": "Görsel boyutları 850x290 ve 900x310 arasında olmalıdır. Bu görsele herkes erişebilir.",
+  "orLabelForImageOrColor": "Veya",
+  "unknownUserName": "Bilinmeyen kullanıcı",
+  "yourTimeZone": "Saat dilimi",
+  "categoriesNotAvailableError": "Etkinlik oluşturmadan önce 'Kategorileri yönet' altından yeni kategori ekle."
 }
