--- a/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
+++ b/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
@@ -39,7 +39,7 @@
   "cancelEvent": "Etknliği iptal et",
   "deleteDraft": "Taslağı sil",
   "sendReminder": "Hatırlatma gönder",
-  "registeredParticipants": "Registered participants",
+  "registeredParticipants": "Kayıtlı katılımcılar",
   "totalNoOfParticipants": "Maksimum kayıtlı sayısı",
   "private": "Özel",
   "public": "Genel",
