--- a/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
+++ b/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
@@ -36,7 +36,7 @@
   "closeRegistration": "Kaydı kapat",
   "editEventInformation": "Etkinliği düzenle",
   "exportRegistrationDetails": "Kayıt verisini dışarı aktar",
-  "cancelEvent": "Etknliği iptal et",
+  "cancelEvent": "Etkinliği iptal et",
   "deleteDraft": "Taslağı sil",
   "sendReminder": "Hatırlatma gönder",
   "registeredParticipants": "Kayıtlı katılımcılar",
@@ -63,7 +63,7 @@
   "venuePlaceholder": " Bir lokasyon seç",
   "eventDescriptionStep1": "Açıklama",
   "eventDescriptionPlaceholder": "Etkinliği kısaca açıkla",
-  "startDateStep1": "Balangıç tarihi",
+  "startDateStep1": "Başlangıç tarihi",
   "startTimeStep1": "Başlangıç saati",
   "endTimeStep1": "Bitiş tarihi",
   "maxParticipantsStep1": "Maksimum katılımcı sayısı",
@@ -76,7 +76,7 @@
   "autoRegisterCheckboxLabelStep2": "Mecburi katılımcıları otomatik kayıt et",
   "publicAudience": "Genel",
   "privateAudience": "Özel",
-  "inPersonEvent": "Yüzyüze",
+  "inPersonEvent": "Yüz yüze",
   "teamsEvent": "Teams",
   "liveEvent": "Canlı etkinlik",
   "sortBy": "Sıralama",
@@ -85,7 +85,7 @@
   "noUserSelectedHeaderStep2": "En az bir kişi veya grup seç",
   "noUserSelectedContentStep2": "Kişi veya grup seçmek için ara",
   "audienceDetailsStep2": "Katılımcı Detayları",
-  "eventPreviewStep3": "Etkinlik önizlemesi",
+  "eventPreviewStep3": "Etkinlik ön izlemesi",
   "step3of3": "Adım 3/3",
   "mandatoryToggleStep2": "Mecburi",
   "endDateStep1": "Bitiş Tarihi",
@@ -106,7 +106,7 @@
   "allEventsTab": "Tüm Etkinlikler",
   "filterButtonText": "Filtrele",
   "sortByNewest": "En yeni",
-  "sortByPopularity": "En populer",
+  "sortByPopularity": "En popüler",
   "registeredEventsTab": "Kayıtlı Etkinlikler",
   "completedEventsTab": "Tamamlanan Etkinlikler",
   "eventCardImageLoadingPlaceholder": "Görsel yükleniyor...",
